--- a/backend/.env
+++ b/backend/.env
@@ -11,3 +11,9 @@ APP_PORT=8080
 # =====================================
 
 DB_URL = mongodb+srv://user_admin:Phuc27012004@cluster0.6ushryk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+MINIO_ENDPOINT=s3api.aurora.local
+MINIO_ACCESS_KEY= stu6pyxmsqQazn0SJNs6
+MINIO_SECRET_KEY=5aUslmHaMSZhOBZXa6so0L9snKBBGk1mzQTSJ3sg
+MINIO_BUCKET= event-manager
+MINIO_USE_SSL=true
