--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   image_picker: ^1.2.0
   provider: ^6.1.2 # ✅ 2. Thêm provider để quản lý state
   shared_preferences: ^2.2.3
+  sqflite: ^2.3.3
+  path_provider: ^2.1.3
+  connectivity_plus: ^5.0.2
 
 dev_dependencies:
   flutter_test:
