--- a/backend/.env
+++ b/backend/.env
@@ -13,7 +13,7 @@ APP_PORT=8080
 DB_URL = mongodb+srv://user_admin:Phuc27012004@cluster0.6ushryk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 MINIO_ENDPOINT=s3api.aurora.local
-MINIO_ACCESS_KEY= stu6pyxmsqQazn0SJNs6
-MINIO_SECRET_KEY=5aUslmHaMSZhOBZXa6so0L9snKBBGk1mzQTSJ3sg
+MINIO_ACCESS_KEY= 4QINtncvd6RTEqisL0IY
+MINIO_SECRET_KEY=Cp5cYENTy8JdbbVjnyl0jl8am5inA8HfIRLsNlsl
 MINIO_BUCKET= event-manager
-MINIO_USE_SSL=true
+MINIO_USE_SSL=false
