--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   sqflite: ^2.3.3
   path_provider: ^2.1.3
   connectivity_plus: ^5.0.2
+  sqflite_common_ffi: ^2.3.0
 
 dev_dependencies:
   flutter_test:
